Bug 633206 - Download button width broken in IE6
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@82405 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/content.css
+++ b/style/covehead/content.css
@@ -355,7 +355,7 @@ ul.home-download li a.download-link span.download-info em {
     width: auto;
 }
 
-* html #download ul.home-download {
+* html #download.top-right ul.home-download {
     width: 330px;
 }
 
